# py-chat

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
env/: example.env
pychat/: config.py  database.py  exceptions.py  main.py  router.py
pychat/auth/: models.py  services.py  utils.py
pychat/auth/routes/: api.py  dependencies.py
pychat/auth/schemas/: input.py  output.py
pychat/core/: mail.py  models.py  schemas.py  utils.py
pychat/migrations/auth/: 1_20230104134123_None.py  2_20230104155228_update.py  3_20230104164235_update.py  4_20230104165259_update.py  5_20230106101312_update.py
pychat/migrations/user/: 2_20230104201145_update.py  3_20230106101312_update.py
pychat/user/: models.py  services.py  utils.py  validators.py
pychat/user/routes/: __init__.py
pychat/user/schemas/: input.py  output.py
